tests/diagnostics/catalog/snapshots/ir/IR0013.snap
error[IR0013]: IR_E_DOUBLE_DROP
 --> tests/diagnostics/catalog/sources/ir/IR0013.vit:4:8
  |
4 |   give unresolved_ir_contract;
  |        ^^^^^^^^^^^^^^^^^^^^^^ IR diagnostic anchor
  = note: snapshot covers code, title, span, notes, suggestions, recovery and stable order for IR0013
  = help: keep IR validation diagnostics structured and catalog-backed
